Sets z-index of events to 0 to fix #68

--- a/resources/css/tool.css
+++ b/resources/css/tool.css
@@ -214,7 +214,7 @@ div.nova-calendar .dayheader span.badge {
  */
 
 div.nova-calendar .week-events {
-  z-index: 2;
+  z-index: 0;
   margin-top: 2.2em;
   grid-column: 1 / -1;
   grid-row: 1;
